--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,17 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/logos/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/logos/favicon-32x32.png">
+
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/img/logos/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="assets/img/logos/android-chrome-512x512.png">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/logos/apple-touch-icon.png">
+
+  <link rel="manifest" href="assets/img/logos/site.webmanifest">
+
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
