--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Portfolio</title>
+  <title>Daniel Tran | Developer Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="description" content="Portfolio of Daniel Tran, a developer specializing in frontend with a growing focus on full stack. Explore projects, skills, and modern web applications.">
+
+  <meta property="og:title" content="Daniel Tran | Developer Portfolio">
+  <meta property="og:description" content="Explore the portfolio of Daniel Tran, a developer specializing in frontend with a growing focus on full stack.">
+  <meta property="og:image" content="https://daniel-tran.com/assets/img/previews/social-preview.png">
+  <meta property="og:url" content="https://daniel-tran.com">
+  <meta property="og:type" content="website">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/logos/favicon-16x16.png">
